--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.5",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
